Added sound, changed GUI functions, misc. fixes
-Added a sound alert to the program for when tickets go on sale (program over doubled in size...)
-Replaced "Test Open Website" button with "Test Play Sound" button
-Made "Start!" button on Setup GUI disable if both Showclix monitoring and PAX Website monitoring checkboxes were unchecked
-Added JLabel to Status GUI for Showclix website link
-Made Showclix or PAX Website JLabels on status GUI disappear if option was disabled
-Changed ErrorManagement default window title from "Attendance: Error" to "PAXChecker: Error" (leftover from another project)
-Grouped Browser.java code to be more logical
-Redid some error catch in Browser.java
-Fixed a bug where not specifying email addres but putting a phone number would allow you to test sending a text using "@yahoo.com" as an email address (now disables texting if no email is provided)
-Removed build and nbproject directory from project